--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "bower": "^1.7.9",
+    "js-yaml": "^3.9.1",
     "preact": "^8.1.0",
     "preact-compat": "^3.16.0",
     "purescript": "^0.11.4",
