--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "js-yaml": "^3.9.1",
     "preact": "^8.1.0",
     "preact-compat": "^3.16.0",
+    "pulp": "^12.0.1",
     "purescript": "^0.11.4",
     "purescript-psa": "^0.5.1",
     "purs-loader": "^3.0.0",
